# ai-code-reviewer

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  commitlint.config.cjs  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py  0002_incremental_review.py  0003_review_lifecycle_event.py  0004_finding_and_rule_category.py
backend/app/: __init__.py  main.py
backend/docs/: engine_architecture.md  gitlab_webhook_mvp.md  llm_providers.md
backend/scripts/: seed.py  seed_rules.py
backend/tests/: conftest.py  test_admin_api.py  test_admin_errors.py  test_api_crud.py  test_block_policy.py  test_datetime_serialization.py  test_diff_filter.py  test_diff_utils.py  test_engine_registry.py  test_engines_api.py  test_finding_schema.py  test_finding_taxonomy.py  test_gitlab_client.py  test_gitlab_webhook.py  test_gitlab_webhook_config.py  test_health.py  test_incremental_review.py  test_llm_direct_engine.py  test_llm_filter_stage.py  test_llm_language_checklist.py  test_llm_prompt_truncation.py  test_llm_providers.py  test_models.py  test_mr_lifecycle.py  test_orchestrator_history.py  test_orchestrator_persistence.py  test_orchestrator_provider_injection.py  test_orchestrator_rules_injection.py  test_review_orchestrator.py  test_review_schema.py  test_review_status_literal.py  test_reviews_api.py  test_reviews_recent.py  test_stats_api.py  test_summary_builder.py
(+136 files in other folders)
